<TextView
    style="@style/Medium.Primary"
    android:padding="@dimen/step_description_padding"
    android:id="@+id/step_detail_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"/>

