...
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="@dimen/card_recipe_padding"
                        android:id="@+id/recipe_name"
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        tools:text="Recipe Name"/>
...
